# ml

./: .gitignore
arc-diff/: examples_visualize.py  plot_loss.py  plot_metrics.py
arc-diff/src/: dataloader.py  dataset.py  inference.py  model.py  train.py  visualize.py
arc-meta/src/: arc_dataloader.py  arc_dataset.py  eval.py  model.py  train.py
numin/: README.md  main.py  pyproject.toml  setup.sh  test_demo.py  test_directional_accuracy.py  train.py  train_hrm.ipynb
numin/archieve/: dataset.py  read_ohlcv_columns.py
numin/archieve/src/: dataset.py  eval.py  model.py  prepare_dataset.py  train.py
numin/data/: consolidated_daily_ohlcv_last_10.csv  consolidated_daily_returns.parquet  consolidated_daily_returns_last_10.csv
numin/src/: __init__.py  combine_monthly_correlation_csv.py  dataloader.py  dataset.py  deduplicate_processed_data.py  eval.py  features.py  inference.py  make_dataset_csv.py  model.py  simple_dataset.py
