[project]
name = "numin"
version = "0.1.0"
description = "Meta-Learning for OHLCV-to-Returns Prediction"
readme = "README_ML.md"
requires-python = ">=3.12"
authors = [
    {name = "Saij", email = "saij@example.com"}
]

dependencies = [
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.66.0",
    "pyarrow>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
